add required env vars

--- a/.github/workflows/scheduled_generate.yml
+++ b/.github/workflows/scheduled_generate.yml
@@ -10,6 +10,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      DNS_SERVER_TO_QUERY: 1.1.1.1
     permissions:
       # Give the default GITHUB_TOKEN write permission to commit and push the
       # added or changed files to the repository.
